--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "nodejs-tictactoe",
+  "name": "socket-io-tictactoe",
   "version": "1.2.0",
   "description": "A simple console based TicTacToe game.",
   "main": "server.js",
   "dependencies": {
+    "express": "^4.17.1",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3"
   },
@@ -19,5 +20,6 @@
     "client4-test": "nodemon client.js 127.0.0.1 5050"
   },
   "author": "Debdut Biswas",
-  "license": "ISC"
+  "license": "MIT",
+  "keywords": ["tic-tac-toe", "socket.io"]
 }
